Fix site-content(footer overlapping):grin:

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -36,7 +36,7 @@
     }
   }
   .site-content {
-    // padding: 0 1.5rem;
+    margin-bottom: 4rem;
     h1 {
       // margin-: 0.5rem 0;
       font-size: 1rem;
